margin and padding

--- a/introduction.html
+++ b/introduction.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <!-- external css link -->
+    <link rel="stylesheet" href="intro.css">
     <!-- 
     CSS
     cascading style sheet
@@ -32,7 +34,7 @@
     -> start with tag
 
     2. class selector
-    -> user defined classes
+    -> user defined classespa
     -> start with dot(.)
 
     3. id selector
@@ -42,7 +44,18 @@
     PRIORITY:
     ID SELECTOR > CLASS SELECTOR > ELEMENT SELECTOR
 
+
+
+    TYPES OF CSS:
+    1. inline css
+    -> within a tag using style attribute
+    2. internal css
+    -> within a file
+    -> within a head section using style tag
+    3. external css
+
     -->
+    <!-- internal css style -->
     <style>
         h2
         {
@@ -67,6 +80,9 @@
 <body>
     <h2 id="demo" class="first headings" >Heading Second</h2>
     <h1 id="demo1" class="first">Heading First</h1>
+    <!-- inline css -->
+    <h3  style="color: blue;" >Style Heading Third using inline css</h3>
+    <h5>style Hading Fifth using external css</h5>
 </body>
 
 </html>
