--- a/background.html
+++ b/background.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background</title>
     <style>
-        .container{
-            width: 600px;
-            height: 300px;
+        .container {
+            width: 100%;
+            height: 900px;
             /* background-color: red; */
             /* 255 * 255 * 255 */
             /* rgb format */
@@ -21,13 +22,26 @@
             /* background-image: linear-gradient(to top ,red, green, blue); */
             /* background-image:repeating-linear-gradient(to top left,red, green 10%, blue 20%); */
             /* background-image:radial-gradient(circle,white,red, green, blue, orange, indigo, violet,yellow ); */
-            background-image:repeating-radial-gradient(circle, red, blue 20%, green 50%);
+            /* background-image:repeating-radial-gradient(circle, red, blue 20%, green 50%); */
+            /* background-image: url('https://images.unsplash.com/photo-1575936123452-b67c3203c357?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D&w=1000&q=80'); */
+            background-image: url('images/img1.jpg');
+            /* background-size: cover; */
+            /* background_repeat: no-repeat, repeat-x, repeat-y */
+            background-repeat: no-repeat;
+            /* background-position: top, bottom, left, right, center */
+            background-position:center;
+            /* background-attachment: fixed, scroll */
+            background-attachment: scroll;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-
+        lorem2000
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quam excepturi quasi voluptatibus culpa repellat, dolorem, animi cupiditate suscipit odio libero quod placeat at. Eaque sed magni vero assumenda accusamus, corrupti sequi quia dignissimos quo ducimus aut quidem necessitatibus omnis deserunt? In nemo aut, reiciendis hic debitis sunt quaerat tempora doloremque vel? Molestiae, repudiandae quibusdam ex alias blanditiis a facilis esse temporibus accusamus atque quaerat vero delectus quisquam? Natus sunt quaerat sequi vero repellat voluptatem. Eos recusandae libero voluptatibus sit alias doloribus quasi id deserunt in sint? Praesentium, alias. Dolor voluptatem accusamus cupiditate minima quam deserunt quisquam itaque perferendis at.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem neque eligendi dolorem reiciendis harum quas quaerat temporibus molestiae? Molestiae id debitis magni? Deserunt nesciunt iste, aliquam, et, repudiandae quae quas consequuntur natus minima quidem voluptas corporis in labore asperiores sunt nihil eum! Voluptatibus sed porro nisi amet sunt quaerat repellat saepe id provident. Ratione nostrum placeat vel, recusandae error dignissimos blanditiis adipisci aliquid consectetur, fugiat aspernatur cumque sunt tempore voluptatum facilis. Perspiciatis ipsam iure ea totam nostrum natus cumque tempora pariatur dolores illo nobis iste, fugit corporis et debitis voluptatem? Omnis dignissimos autem nostrum perferendis dolorum, suscipit deleniti asperiores vitae nisi minus obcaecati quasi totam eum delectus accusantium impedit aperiam? Quod iusto nulla quae, saepe corporis minus quasi reiciendis cum quaerat. Earum quis, doloremque fugit ratione atque delectus minima eum explicabo. Sit recusandae sequi possimus qui doloribus ex, quo, nobis dignissimos fugiat fugit accusamus natus quaerat quidem alias pariatur tempore illum voluptate adipisci consequuntur dolorem? Tempora illo ratione placeat dolores culpa officiis porro sequi velit deleniti vitae, veniam facilis natus beatae nesciunt in reprehenderit nisi! Maxime aperiam nesciunt, rerum esse distinctio voluptatem sapiente ab dolorem animi tempore, neque dicta id eveniet deleniti voluptatibus, architecto laboriosam consectetur fugiat sunt ipsa labore quibusdam recusandae. Fugiat, aliquid alias accusantium aut, fugit obcaecati corporis, quo praesentium voluptate non voluptates nam dolor? Eum quisquam debitis delectus consequuntur qui libero inventore unde, praesentium sint neque hic architecto itaque minima! Amet vel id pariatur iusto incidunt aperiam perspiciatis corporis repudiandae nulla quidem, ipsum sint praesentium sed enim a ut. Et nisi nulla ipsam, doloribus repellat deleniti debitis eius illo, rerum ut quidem eveniet dolores non consectetur? Sed possimus molestias ratione sit libero quod. Maiores reiciendis amet explicabo nisi, necessitatibus quas enim, possimus sed quidem eveniet dolor. Quo doloribus porro ratione eos, ad amet, at voluptatem, nemo possimus tempora saepe quam! Architecto repellendus amet quos sunt modi, facilis aperiam illo quis aliquam ipsa asperiores quidem placeat sit praesentium similique tempora, soluta expedita cupiditate dicta ducimus ratione eaque repudiandae quo veniam. Tempora iure natus nam ab ipsum. Hic totam libero nostrum ullam tempora nemo placeat iste facere pariatur quae, error soluta blanditiis necessitatibus nulla iusto tempore sed ipsum molestias numquam. Dolor eligendi necessitatibus illum nesciunt voluptatibus debitis aperiam alias doloribus vitae totam amet, tempora laboriosam! Eius corrupti deleniti vel dicta, et maxime accusamus reprehenderit obcaecati deserunt laborum a cupiditate ad fugit amet voluptatum ut repudiandae asperiores, sit nemo. Facere repellat cum saepe odit magnam ducimus ipsam iste unde corporis soluta tenetur eum voluptates voluptatibus omnis sunt ex ipsum provident, quos dolore reiciendis sit harum fugit. Nulla ducimus accusamus quas ipsa voluptatum? Eaque, nesciunt nostrum, reprehenderit illo consectetur voluptate nam quam quia sequi autem qui. Deserunt tenetur laudantium nam dicta aspernatur eveniet, recusandae doloremque facere dignissimos, voluptates totam ipsa incidunt temporibus iure sapiente rerum similique est. Est hic fuga reprehenderit placeat blanditiis dolorem perferendis, corporis quia. Architecto, ducimus officia. Beatae repudiandae reprehenderit sit laboriosam magnam veniam mollitia voluptatibus consequuntur error itaque autem minima veritatis nisi hic enim, quos voluptatem? Quos?
     </div>
 </body>
+
 </html>
